# volley_drone_ws

./: .env  .gitignore  .gitmodules  Dockerfile  README.md  build.sh  build_image.sh  clone_repos.sh  launch_container.sh  merge_compile_commands.py  start-vnc.sh
.devcontainer/jetson/: devcontainer.json
.devcontainer/linux/: devcontainer.json
.devcontainer/mac/: devcontainer.json
.devcontainer/scripts/: host-setup-xauth.sh
dotfiles/: .zshrc
generated_trajs/: circle_traj.csv
mount/: .tmux.conf  .zsh_history
ros_logs/: fast_mocap_log.csv  fast_state_log.csv  slow_state_log.csv  static_mocap_log.csv  static_state_log.csv
src/bounce_policy_pkg/: CMakeLists.txt  package.xml  setup.py
src/bounce_policy_pkg/launch/: policy_node.launch
src/bounce_policy_pkg/resources/policies/bounce_policy/: run_config.json
src/bounce_policy_pkg/resources/policies/bounce_policy/000396361728/: _CHECKPOINT_METADATA  _METADATA  manifest.ocdbt  ppo_network_config.json
src/bounce_policy_pkg/resources/policies/bounce_policy/000396361728/array_metadatas/: process_0
src/bounce_policy_pkg/resources/policies/bounce_policy/000396361728/ocdbt.process_0/: manifest.ocdbt
src/bounce_policy_pkg/resources/policies/bounce_policy/018855493632/: _CHECKPOINT_METADATA  _METADATA  manifest.ocdbt  ppo_network_config.json
src/bounce_policy_pkg/resources/policies/bounce_policy/018855493632/array_metadatas/: process_0
src/bounce_policy_pkg/resources/policies/bounce_policy/018855493632/ocdbt.process_0/: manifest.ocdbt
src/bounce_policy_pkg/resources/policies/recovery_policy/: run_config.json
src/bounce_policy_pkg/resources/policies/recovery_policy/000231211008/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt  ppo_network_config.json
src/bounce_policy_pkg/resources/policies/recovery_policy/000231211008/array_metadatas/: process_0
src/bounce_policy_pkg/resources/policies/recovery_policy/000231211008/ocdbt.process_0/: manifest.ocdbt
src/bounce_policy_pkg/scripts/: mlp_ctrl_node.py
src/bounce_policy_pkg/src/bounce_policy_package/: mlp_ctrl.py  state_machine.py
src/bounce_policy_pkg/src/bounce_policy_package/inference_server/: PolicyServerInterface.py
src/bounce_policy_pkg/src/bounce_policy_package/observation/: ObservationConfig.py  observation.py  observation_backend.py  observation_data.py  observation_history.py  observation_populator.py
src/bounce_policy_pkg/src/bounce_policy_package/types/: buffer.py
src/bounce_policy_pkg/src/bounce_policy_pkg/: mlp_ctrl.py  state_machine.py
src/bounce_policy_pkg/src/bounce_policy_pkg/action/: policy_to_command.py
src/bounce_policy_pkg/src/bounce_policy_pkg/observation/: ObservationConfig.py  numpy_jax_shim.py  observation.py  observation_backend.py  observation_data.py  observation_history.py  observation_populator.py  test.py
src/bounce_policy_pkg/src/bounce_policy_pkg/types/: ball.py  buffer.py  drone.py
src/motion_capture_ros/motion_capture_ros/: CMakeLists.txt  package.xml
src/motion_capture_ros/motion_capture_ros/launch/: base_computer.launch  mc_drone_aim.launch  mc_drone_aim_no_pc.launch  mc_mac_aim.launch  motion_capture.launch  motion_capture_optitrack.launch
src/motion_capture_ros/motion_capture_ros/resources/: arena.rviz
src/motion_capture_ros/motion_capture_ros/src/: .motion_capture.cpp.swp  motion_capture.cpp
src/motion_capture_ros/motion_capture_ros_msgs/: CMakeLists.txt  package.xml
src/motion_capture_ros/motion_capture_ros_msgs/msg/: PointCloud.msg
src/policy_package/: CMakeLists.txt  package.xml  setup.py
src/policy_ros/: inference_server.py  mlp_ctrl_node.py  observation.py  state_interface.py  test.py
tmux_script/: run_cmd_test.sh  run_hil_policy_bounce.sh  run_off_board_mac.sh  run_onboard.sh  run_onboard_aim.sh  run_onboard_aim_policy.sh  run_sim_policy.sh  run_sim_policy_bounce.sh  setup_mac.sh
(+50 files in other folders)
